# Forma

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: development.yml  development.yml.bak
examples/: CMakeLists.txt
examples/sandbox/: main.cpp
include/forma/: application.hpp  core.hpp  entry_point.hpp  forma.hpp  input.hpp  layer.hpp  layer_stack.hpp  log.hpp  version.hpp  version.hpp.in  window.hpp
include/forma/compiler/: compiler.hpp
include/forma/events/: application_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp
include/forma/imgui/: imgui_layer.hpp
include/forma/os/: platform.hpp
include/forma/platform/: platform.hpp
include/forma/platform/apple/: apple_window.hpp
include/forma/platform/linux/: linux_input.hpp  linux_window.hpp
include/forma/platform/opengl/: imgui_impl_opengl3.h
include/forma/platform/windows/: windows_window.hpp
src/: CMakeLists.txt  application.cpp  core.cpp  layer.cpp  layer_stack.cpp  log.cpp
src/imgui/: imgui_layer.cpp
src/platform/apple/: apple_window.cpp
src/platform/linux/: linux_input.cpp  linux_window.cpp
src/platform/opengl/: imgui_impl_opengl3.cpp
src/platform/windows/: windows_window.cpp
